[package]
name = "identity-traverse"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
ratatui = { version = "0.28", features = ["all-widgets", "crossterm"]}
tokio-postgres = "0.7"
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
either = "1.13"
regex = "1.11"
itertools = "0.13"
throbber-widgets-tui = "0.7.1"
tui-logger = { version = "0.13.2", features = ["crossterm"] }
log = "0.4"
clap = {version = "4.5", features = ["derive"]}